--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -13,13 +13,14 @@
 
 <body dir="rtl">
     <header>
-        <a asp-page="Index">Admin</a>
+        <a asp-page="/Admin/Index">Admin</a>
     </header>
     <div class="row">
         <div class="col-md-2">
             <nav>
                 <ul>
-                    <li><a asp-page="Index" class="nav-item">محصولات</a></li>
+                    <li><a asp-page="/Admin/Index" class="nav-item">محصولات</a></li>
+                    <li><a asp-page="/Admin/ManageUsers/Index" class="nav-item">کاربران</a></li>
                 </ul>
             </nav>
         </div>
