--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 <hr />
 <div class="row">
     <div class="col-md-12">
-        @if (User.Identity.IsAuthenticated)
+        @if (User.Identity!.IsAuthenticated)
         {
             <div class="alert alert-danger">شما دسترسی ندارید</div>
         }
