--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,14 +30,20 @@
                                 با ما</a>
                         </li>
                         <partial name="_Groups" />
-                        @if (User.Identity.IsAuthenticated)
+                        @if (User.Identity!.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark">@User.Identity.Name خوش آمدید</a>
+                                <a class="nav-link text-dark">@User.Identity!.Name خوش آمدید</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-controller="Account" asp-action="Logout">خروج</a>
                             </li>
+                            @if (User.IsAdmin())
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-page="/Admin/Index">پنل مدیریت</a>
+                                </li>
+                            }
                         }
                         else
                         {
